Don't allow events to be swallowed by MdFocusRing.

BUG=604344

Review URL: https://codereview.chromium.org/1901163002

Cr-Commit-Position: refs/heads/master@{#388323}

Former-commit-id: 6adf4a134edc444c3634d215380325846dad8011